# sales-agents-whitelabel

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/agents/: sales_agent.json  swarm_config.json
docs/: AGENT_CORE_ANALYSIS.md  AUDIT_SYSTEM.md  CODE_REFACTORING_ANALYSIS.md  CONTRIBUTING.md  LOCAL_EXECUTION_GUIDE.md  MCP_SERVERS.md  REFACTORING_SUMMARY.md  SSL_CONFIGURATION.md  architecture.md
examples/: __init__.py  basic_usage.py  streamlit_example.py  test_strands_agent.py
sales_agents_whitelabel.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: start_api_server.py  start_mcp_servers.py
src/: __init__.py
src/agents/: __init__.py  mcp_tools.py  swarm_sales_agent.py
src/api/: __init__.py  models.py  server.py
src/config/: __init__.py  agent_configs.py  settings.py
src/mcp_servers/: __init__.py  base_mcp.py  http_server.py  mock_analytics_server.py  mock_catalog_server.py  mock_contract_server.py  mock_crm_server.py  mock_ifood_server.py  mock_pricing_server.py  mock_qualification_server.py  mock_recommendation_server.py  mock_restaurant_server.py
src/models/: __init__.py  agent_config.py  audit.py  conversation.py  lead.py  sales_pipeline.py
src/orchestrator/: __init__.py  swarm_orchestrator.py
src/tools/: __init__.py  analytics_tool.py  catalog_tool.py  crm_tool.py
src/utils/: __init__.py  logger.py  mcp_server_factory.py  metrics.py  tool_factory.py
streamlit-app/: README.md  app.py  requirements.txt
tests/: conftest.py
tests/fixtures/: sample_data.py
tests/integration/: test_full_flow.py
tests/unit/: test_base_agent.py  test_faq_agent.py  test_workflow_engine.py
